terminal: Fix ::get_text start column not to be negative

When the selection starts at the beginning of the line but
having been done by starting on the preceding line after the
end of text, the start column is -1, which would cause
::get_text() to lose the first line of the selected text.
Regression from commit 3696348c0b9c7d60caf7302411ec4c0298f56e57.

https://bugzilla.gnome.org/show_bug.cgi?id=765276